Set min heights to avoid content shift
Because of the way the primary nav loads and deals with mobile-first,
etc, there is the potential for some content shift, which this endeavors
to correct. Primarily it does this with a couple magic numbers, which
represent the likely height for the header and primary nav. These
numbers are unlikely to change unless the header is revamped, or the
menu breaks onto two lines. Since they are *min*-heights, the only
negative effect will be that CLS increases slightly. This can be
mitigated by adjusting the values.

--- a/themes/shiro/assets/src/sass/components/_primary-nav.scss
+++ b/themes/shiro/assets/src/sass/components/_primary-nav.scss
@@ -5,11 +5,14 @@
 	margin-top: rem(66);
 	padding: 0;
 	padding-top: rem(12);
+
 	width: 100%;
+	@media ( min-width: #{$primary-nav-breakpoint} ) {
+		min-height: rem(57); // Prevent content shift when loading
+	}
 
 	&__drawer {
 		width: 100%;
-
 
 		@media ( min-width: #{$primary-nav-breakpoint} ) {
 			align-items: start;
@@ -20,8 +23,12 @@
 		}
 
 		[data-dropdown-status="uninitialized"] & {
-			display: flex;
-			flex-direction: column-reverse;
+			display: none;
+
+			@include target-ie {
+				display: flex;
+				flex-direction: column-reverse;
+			}
 
 			@media ( min-width: #{$primary-nav-breakpoint} ) {
 				flex-direction: row-reverse;
